@@ -255,6 +255,7 @@ int main(int argc, char **argv)
     PBlastDb db=NULL;
 
     ajint idCount=0;
+    ajint idDone;
     AjPList listTestFiles = NULL;
     void ** testFiles = NULL;
     ajint nfiles;
@@ -402,12 +403,17 @@ int main(int argc, char **argv)
     embDbiHeader (entFile, filesize, idCount, recsize, dbname, release, date);
 
     if (systemsort)
-        idCount = embDbiSortWriteEntry (entFile, maxidlen,
+        idDone = embDbiSortWriteEntry (entFile, maxidlen,
 					dbname, nfiles, cleanup, sortopt);
     else			/* save entries in entryIds array */
-        embDbiMemWriteEntry (entFile, maxidlen,
-			     idlist, &entryIds);
+    {
+        idDone = embDbiMemWriteEntry (entFile, maxidlen,
+				      idlist, &entryIds);
+	if (idDone != idCount)
+	  ajFatal ("Duplicates not allowed for in-memory processing");
+    }
 
+    embDbiHeaderSize (entFile, 300+(idDone*(ajint)recsize), idDone);
     ajFileClose (&entFile);
 
     /*
@@ -1234,6 +1240,7 @@ static AjBool dbiblast_parseId (AjPStr line, AjPFile* alistfile,
 	return ajFalse;
 
     ajRegSubI (idexp, 1, id);
+    ajStrToUpper(id);
 
     ajDebug ("parseId '%S'\n", *id);
 
